tests/ui/sk-field-no-sort.stderr
error: field named 'sk' must be annotated with #[sort_key]
 --> tests/ui/sk-field-no-sort.rs
  |
  |     sk: String,
  |     ^^^^^^^^^^
